# mWOI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: mwtrans.hpp  mwtrans_complex.hpp  timer.hpp
src/: CMakeLists.txt  mwtrans.cc  mwtrans_complex.cc
test/: CMakeLists.txt  functions.cc  functions.hpp  test_complex.cc  test_finite.cc  test_infinite.cc
